--- a/Final Project/pages/homepage/style.css
+++ b/Final Project/pages/homepage/style.css
@@ -11,6 +11,32 @@ body    {
     height: 100%;
     background-color: var(--black);
 }
+header {
+    display: flex;
+    flex-direction: row;
+}
+.cart {
+    display: flex;
+    text-align: center;
+    flex-direction: row;
+}
+#btn_cart   {
+    width: 80px;
+    height: 80px;
+    background-color: var(--darkgrey);
+    color: var(--white);
+    font-size: larger;
+    margin-top: 50px;
+    margin-left: 200px;
+}
+#btn_clear_cart {
+    width: 80px;
+    height: 80px;
+    background-color: var(--crimson);
+    color: var(--white);
+    font-size: larger;
+    margin-top: 50px;
+}
 .logo   {
     height: 200px;
     margin-left: 100px;
@@ -113,6 +139,10 @@ h2 {
 h3, h4 {
     font-size: 18px;
     color: var(--darkgrey);
+}
+h4 {
+    display: flex;
+    flex-direction: column;
 }
 img {
     width: 200px;
