--- a/Final Project/pages/contactpage/contact.css
+++ b/Final Project/pages/contactpage/contact.css
@@ -11,6 +11,34 @@ body    {
     height: 100%;
     background-color: var(--black);
 }
+.cart {
+    display: flex;
+    text-align: center;
+    flex-direction: row;
+}
+header {
+    display: flex;
+    flex-direction: row;
+}
+#btn_cart   {
+    width: 80px;
+    height: 80px;
+    background-color: var(--darkgrey);
+    color: var(--white);
+    font-size: larger;
+    margin-top: 50px;
+    margin-left: 200px;
+    border-radius: 16px;
+}
+#btn_clear_cart {
+    width: 80px;
+    height: 80px;
+    background-color: var(--crimson);
+    color: var(--white);
+    font-size: larger;
+    margin-top: 50px;
+    border-radius: 16px;
+}
 form    {
     color: var(--white);
     display: flex;
@@ -26,6 +54,20 @@ h1  {
     flex-direction: column;
     width: 40%;
     text-align: center;
+    margin-bottom: 20px;
+}
+#submit {
+    margin-bottom: 20px;
+    width: 200px;
+    height: 50px;
+    background-color: var(--darkgrey);
+    color: var(--white);
+    border-radius: 16px;
+}
+#submit:hover {
+    cursor: pointer;
+    background-color: var(--crimson);
+    color: var(--white);
 }
 label   {
     padding: 10px;
@@ -98,8 +140,11 @@ footer  {
     }
     header {
         height: 100px;
+        width: 360px;
     }
     .logo   {
+        width: 360px;
+        height: 100px;
         margin-left: 20px;
         column-gap: 0px;
     }
@@ -129,5 +174,24 @@ footer  {
     .contacts   {
         display: flex;
         flex-direction: column;
+    }
+    .cart {
+        display: flex;
+        flex-direction: column;
+        font-size: 10px;
+        row-gap: 10px;
+        margin-top: 5px;
+    }
+    #btn_cart {
+        height: 40px;
+        width: 40px;
+        margin: 0px;
+        padding: 0px;
+    }
+    #btn_clear_cart {
+        height: 40px;
+        width: 40px;
+        margin: 0px;
+        padding: 0px;
     }
 }
