--- a/Final Project/pages/homepage/style.css
+++ b/Final Project/pages/homepage/style.css
@@ -164,6 +164,10 @@ h4 {
     display: flex;
     flex-direction: column;
 }
+.removecart {
+    background-color: var(--crimson);
+    color: var(--white);
+}
 img {
     width: 200px;
     height: 300px;
